# zentinel-agent-waf

./: Cargo.toml  Dockerfile
crates/agent-protocol/: Cargo.toml
crates/agent-protocol/benches/: hot_path.rs
crates/agent-protocol/src/: binary.rs  buffer_pool.rs  errors.rs
crates/agent-protocol/src/v2/: capabilities.rs  control.rs  health.rs  metrics.rs  protocol_metrics.rs  streaming.rs
crates/common/: Cargo.toml
crates/common/src/: budget.rs  circuit_breaker.rs
src/: engine.rs  lib.rs
src copy/: main.rs
