[package]
name = "zentinel-agent-protocol"
version = "0.5.10"
edition = "2021"
authors = ["Zentinel Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/zentinelproxy/zentinel"
homepage = "https://github.com/zentinelproxy/zentinel"
rust-version = "1.85"
description = "Agent protocol and IPC for Zentinel reverse proxy external processors"
keywords = ["proxy", "reverse-proxy", "agent", "protocol", "ipc"]
categories = ["network-programming"]

[features]
default = []
# Enable binary (MessagePack) serialization for UDS transport
binary-uds = ["rmp-serde"]
# Enable memory-mapped buffers for large request/response bodies
mmap-buffers = ["memmap2", "dep:tempfile"]

[dependencies]
# Local crates
zentinel-common = { path = "../common", version = "0.5.10" }

# Protocol and serialization
prost = "0.14"
tonic = { version = "0.14", features = ["transport", "tls-ring", "tls-native-roots"] }
tonic-prost = "0.14"
bytes = "1.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_bytes = "0.11"
rmp-serde = { version = "1.3", optional = true }
memmap2 = { version = "0.9", optional = true }
tempfile = { version = "3.25", optional = true }

# Async runtime
tokio = { version = "1.49", features = [
    "rt-multi-thread",  # Multi-threaded runtime
    "net",              # TCP/UDP networking
    "io-util",          # AsyncRead/AsyncWrite utilities
    "time",             # Timeouts and intervals
    "sync",             # Channels, mutexes, semaphores
    "signal",           # Unix signal handling (SIGTERM, SIGHUP)
    "fs",               # File operations (config reload)
    "macros",           # #[tokio::main] and #[tokio::test]
] }
async-trait = "0.1"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# HTTP
http = "1.2"
reqwest = { version = "0.13", default-features = false, features = ["rustls", "json"] }

# TLS (for custom certificate verification)
rustls = { version = "0.23", features = ["aws-lc-rs"] }
hyper-rustls = { version = "0.27", default-features = false, features = ["ring", "http2", "tls12"] }
hyper-util = { version = "0.1", features = ["client-legacy", "tokio"] }
tokio-rustls = "0.26"

# Utilities
uuid = { version = "1.21", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"
base64 = "0.22"
dashmap = "6.1"
smallvec = { version = "1.13", features = ["serde"] }

# Unix sockets
tokio-util = { version = "0.7", features = ["codec"] }
tokio-stream = "0.1"
futures = "0.3"

# Tracing
tracing = "0.1"

[build-dependencies]
tonic-prost-build = "0.14"

[dev-dependencies]
tempfile = "3.25"
criterion = "0.8"
proptest = "1.10"

[[bench]]
name = "hot_path"
harness = false
