[package]
name = "zentinel-common"
version = "0.5.10"
edition = "2021"
authors = ["Zentinel Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/zentinelproxy/zentinel"
homepage = "https://github.com/zentinelproxy/zentinel"
rust-version = "1.85"
description = "Common utilities and types for Zentinel reverse proxy"
keywords = ["proxy", "reverse-proxy", "utilities"]
categories = ["network-programming"]

[dependencies]
# Async runtime (not WASM-compatible)
tokio = { version = "1.49", features = [
    "rt-multi-thread",  # Multi-threaded runtime
    "net",              # TCP/UDP networking
    "io-util",          # AsyncRead/AsyncWrite utilities
    "time",             # Timeouts and intervals
    "sync",             # Channels, mutexes, semaphores
    "signal",           # Unix signal handling (SIGTERM, SIGHUP)
    "fs",               # File operations (config reload)
    "macros",           # #[tokio::main] and #[tokio::test]
], optional = true }
# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"], optional = true }
prometheus = { version = "0.14", optional = true }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP
http = "1.2"

# Utilities
uuid = { version = "1.21", features = ["v4", "serde"], optional = true }
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"

# System metrics (not WASM-compatible)
sysinfo = { version = "0.38", optional = true }

[features]
default = ["runtime"]
# Runtime features - not available in WASM
runtime = ["tokio", "tracing-subscriber", "prometheus", "sysinfo", "uuid"]

[dev-dependencies]
criterion = "0.8"
proptest = "1.10"
insta = "1.46"
